@@ -217,7 +217,7 @@ void    daemon_init(void)
 	else
 		zabbix_open_log(LOG_TYPE_FILE,CONFIG_LOG_LEVEL,CONFIG_LOG_FILE);
 
-	if( (pid = fork()) != 0 )
+	if( (pid = zbx_fork()) != 0 )
 	{
 		exit( 0 );
 	}
@@ -226,19 +226,28 @@ void    daemon_init(void)
 	
 	signal( SIGHUP, SIG_IGN );
 
-	if( (pid = fork()) !=0 )
+	if( (pid = zbx_fork()) !=0 )
 	{
 		exit( 0 );
 	}
 
 	chdir("/");
 /*	umask(022);*/
-	umask(002);
+	umask(0002);
 
-	for(i=0;i<MAXFD;i++)
+	for(i=0; i<MAXFD; i++)	close(i);
+
+	open("/dev/null", O_RDONLY);    /* stdin */
+
+	if(CONFIG_LOG_FILE)
 	{
-		/* Do not close stderr */
-		if(i != fileno(stderr)) close(i);
+		fopen(CONFIG_LOG_FILE, "a+");   /* stdout */
+		fopen(CONFIG_LOG_FILE, "a+");   /* stderr */
+	}
+	else
+	{
+		open("/dev/null", O_RDWR);      /* stdout */
+		open("/dev/null", O_RDWR);      /* stderr */
 	}
 
 /*	openlog("zabbix_agentd",LOG_LEVEL_PID,LOG_USER);
@@ -505,7 +514,7 @@ pid_t	child_passive_make(int i,int listenfd, int addrlen)
 {
 	pid_t	pid;
 
-	if((pid = fork()) >0)
+	if((pid = zbx_fork()) >0)
 	{
 			return (pid);
 	}
